# ssvm-nodejs-starter

./: Cargo.toml  Dockerfile  README.md  package.json
node/: .gitignore  index.js  test.js
node.notused/: app.js
node/views/: ajax-example.hbs  index.hbs
src/: lib.rs
